<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cardview_light_background">

    <!-- Modal Container -->
    <LinearLayout
        android:layout_width="713dp"
        android:layout_height="462dp"
        android:layout_centerInParent="true"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginBottom="32dp"
        android:background="@color/white"
        android:elevation="8dp"
        android:orientation="horizontal"
        android:padding="16dp">

        <!-- Close Button -->
        <ImageButton
            android:id="@+id/btn_close_note"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:src="@drawable/ic_close"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/close" />

        <!-- Note Input Field -->
        <EditText
            android:id="@+id/edt_note_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/type_here"
            android:padding="8dp"
            android:background="@drawable/rounded_edittext" />

        <!-- Done Button -->
        <Button
            android:id="@+id/btn_done_note"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/done" />
    </LinearLayout>
</RelativeLayout>
