<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:id="@+id/left_panel"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="#fadcdc"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintWidth_percent="0.35">

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:orientation="horizontal"
        android:padding="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/taskstitle"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:backgroundTint="#a88585"
            android:gravity="center"
            android:text="@string/taskstitle"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.032"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.03"/>

        <Button
            android:id="@+id/note"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:backgroundTint="#a88585"
            android:gravity="center"
            android:text="@string/notestitle"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginHorizontal="150dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.032"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.03"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.101">

        <TextView
            android:id="@+id/notetextview"
            android:layout_width="400dp"
            android:layout_height="30dp"
            android:layout_marginTop="16dp"
            android:text="Notes:"
            android:textSize="20sp"
            android:textStyle="bold|italic" />

        <ScrollView
            android:id="@+id/noteview"
            android:layout_width="400dp"
            android:layout_height="30dp"
            android:layout_weight="1">

            <LinearLayout
                android:id="@+id/notecontainer"
                android:layout_width="400dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"/>

        </ScrollView>


    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.829">

        <EditText
            android:id="@+id/titleEditText"
            android:layout_width="400dp"
            android:layout_height="wrap_content"
            android:hint="Note Title"
            tools:layout_editor_absoluteX="50dp"
            tools:layout_editor_absoluteY="627dp" />

        <EditText
            android:id="@+id/contentEditText"
            android:layout_width="400dp"
            android:layout_height="wrap_content"
            android:hint="Note Description"
            android:inputType="textMultiLine"
            android:minLines="5"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="682dp" />

    </LinearLayout>

    <Button
        android:id="@+id/savenote"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:backgroundTint="#a88585"
        android:text="@string/savenote"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/left_panel"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>